--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -1,13 +1,13 @@
 {% set name = "PyPOTS" %}
-{% set version = "0.0.9" %}
+{% set version = "0.0.10" %}
 
 package:
   name: {{ name|lower }}
   version: {{ version }}
 
 source:
-  url: https://github.com/WenjieDu/PyPOTS/archive/v0.0.9.tar.gz
-  sha256: 3718e8c26b5bc048c488b06a310e5c9b29108386e3176caa9d164dadc5296bef
+  url: https://pypi.io/packages/source/{{ name[0] }}/{{ name }}/{{ name }}-{{ version }}.tar.gz
+  sha256: 1973c608a09541899366ffe73dac828027d7ff7e446614e04fccdcea391e421e
 
 build:
   noarch: python
@@ -26,7 +26,7 @@ requirements:
     - scipy
     - tensorboard
     - pandas
-    - matplotlib-base
+    - h5py
     - pycorruptor
     - tsdb
 
