--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -25,7 +25,7 @@ requirements:
     - pytorch >=1.11.0
     - scipy
     - tensorboard
-    - pandas
+    - pandas <2.0.0
     - h5py
     - pycorruptor
     - tsdb
