--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -1,13 +1,14 @@
 {% set name = "pypots" %}
-{% set version = "0.0.11" %}
+{% set version = "0.1" %}
 
 package:
   name: {{ name|lower }}
   version: {{ version }}
 
 source:
-  url: https://pypi.io/packages/source/{{ name[0] }}/{{ name }}/{{ name }}-{{ version }}.tar.gz
-  sha256: 26159b7cb5538a41ae86903580f65f1ef5dbd31e76ae90c0e4bc97b41e4e67a8
+#  url: https://pypi.io/packages/source/{{ name[0] }}/{{ name }}/{{ name }}-{{ version }}.tar.gz
+  url: https://pypi.io/packages/source/p/pypots/pypots-0.1.linux-x86_64.tar.gz
+  sha256: 0a2da347c33d746928dcd344f3d64dfd3140d35e8bb0e459703d0e2c79b95db3
 
 build:
   noarch: python
@@ -20,9 +21,9 @@ requirements:
     - pip
   run:
     - python >=3.7
-    - numpy >=1.23.3
-    - scikit-learn >=0.24.1
-    - pytorch >=1.11.0
+    - numpy
+    - scikit-learn
+    - pytorch >=1.10
     - scipy
     - tensorboard
     - pandas <2.0.0
@@ -40,7 +41,7 @@ test:
 
 about:
   home: https://github.com/WenjieDu/PyPOTS
-  summary: A Python Toolbox for Data Mining on Partially-Observed Time Series
+  summary: 'A Python Toolbox for Data Mining on Partially-Observed Time Series'
   description: |
     PyPOTS is born to become a handy toolbox that is going to make data mining on POTS easy rather than tedious, 
     to help engineers and researchers focus more on the core problems in their hands rather than on how to deal 
