--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -18,14 +18,14 @@ requirements:
   host:
     - python >=3.7
     - pip
-    - numpy >=1.23.3
-    - scikit-learn >=0.24.1
-    - pytorch >=1.11.0
+    - numpy
+    - scikit-learn
+    - pytorch >=1.10.0
     - scipy
     - tensorboard
     - pandas <2.0.0
     - h5py
-    - pycorruptor >=0.2
+    - pygrinder >=0.2
     - tsdb >=0.2
   run:
     - python >=3.7
@@ -35,14 +35,14 @@ test:
     - pypots
   requires:
     - pip
-    - numpy >=1.23.3
-    - scikit-learn >=0.24.1
-    - pytorch >=1.11.0
+    - numpy
+    - scikit-learn
+    - pytorch >=1.10.0
     - scipy
     - tensorboard
     - pandas <2.0.0
     - h5py
-    - pycorruptor >=0.2
+    - pygrinder >=0.2
     - tsdb >=0.2
   commands:
     - pip check
