--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -34,7 +34,18 @@ requirements:
 test:
   imports:
     - pypots
-  # requires:
+  requires:
+    - python >=3.7
+    - pip
+    - numpy
+    - scikit-learn
+    - pytorch >=1.10.0
+    - scipy
+    - tensorboard
+    - pandas <2.0.0
+    - h5py
+    - pygrinder >=0.2
+    - tsdb >=0.2
   
   commands:
     - pip check
