--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -18,9 +18,6 @@ requirements:
   host:
     - python >=3.7
     - pip
-  run:
-    - python >=3.7
-    - pip
     - numpy
     - scikit-learn
     - pytorch >=1.10.0
@@ -30,12 +27,15 @@ requirements:
     - h5py
     - pygrinder >=0.2
     - tsdb >=0.2
+    - packaging
+  run:
+    - python >=3.7
+    
 
 test:
   imports:
     - pypots
   requires:
-    - python >=3.7
     - pip
     - numpy
     - scikit-learn
@@ -46,7 +46,7 @@ test:
     - h5py
     - pygrinder >=0.2
     - tsdb >=0.2
-  
+    - packaging
   commands:
     - pip check
 
