--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -25,6 +25,7 @@ requirements:
     - tensorboard
     - pandas <2.0.0
     - h5py
+    - matplotlib
     - pygrinder >=0.2
     - tsdb >=0.2
     - packaging
@@ -44,6 +45,7 @@ test:
     - tensorboard
     - pandas <2.0.0
     - h5py
+    - matplotlib
     - pygrinder >=0.2
     - tsdb >=0.2
     - packaging
