--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -23,7 +23,7 @@ requirements:
     - pytorch >=1.10.0
     - scipy
     - tensorboard
-    - pandas <2.0.0
+    - pandas
     - h5py
     - pyarrow
     - matplotlib
@@ -44,7 +44,7 @@ test:
     - pytorch >=1.10.0
     - scipy
     - tensorboard
-    - pandas <2.0.0
+    - pandas
     - h5py
     - pyarrow
     - matplotlib
