--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -18,39 +18,40 @@ requirements:
   host:
     - python >=3.7
     - pip
-    - numpy
-    - scikit-learn
-    - pytorch >=1.10.0
-    - scipy
-    - tensorboard
-    - pandas
+    - pip
     - h5py
-    - pyarrow
+    - numpy
+    - scipy
+    - sympy
+    - einops
+    - pandas
     - matplotlib
-    - pygrinder >=0.4
-    - tsdb >=0.2
+    - tensorboard
+    - scikit-learn
+    - pytorch>=1.10.0
+    - tsdb>=0.2
+    - pygrinder>=0.4
     - packaging
   run:
     - python >=3.7
-
 
 test:
   imports:
     - pypots
   requires:
     - pip
-    - numpy
-    - scikit-learn
-    - pytorch >=1.10.0
-    - scipy
-    - tensorboard
-    - pandas
     - h5py
-    - pyarrow
+    - numpy
+    - scipy
+    - sympy
+    - einops
+    - pandas
     - matplotlib
-    - pygrinder >=0.4
-    - tsdb >=0.2
-    - packaging
+    - tensorboard
+    - scikit-learn
+    - pytorch>=1.10.0
+    - tsdb>=0.2
+    - pygrinder>=0.4
   commands:
     - pip check
 
