--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -16,7 +16,7 @@ build:
 
 requirements:
   host:
-    - python >=3.7
+    - python >=3.8
     - pip
     - pip
     - h5py
@@ -30,11 +30,12 @@ requirements:
     - tensorboard
     - scikit-learn
     - pytorch >=1.10.0
-    - tsdb >=0.2
-    - pygrinder >=0.4
+    - tsdb >=0.4
+    - pygrinder >=0.6
+    - benchpots >=0.1
     - packaging
   run:
-    - python >=3.7
+    - python >=3.8
 
 test:
   imports:
@@ -52,8 +53,9 @@ test:
     - tensorboard
     - scikit-learn
     - pytorch >=1.10.0
-    - tsdb >=0.2
-    - pygrinder >=0.4
+    - tsdb >=0.4
+    - pygrinder >=0.6
+    - benchpots >=0.1
   commands:
     - pip check
 
