--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -19,12 +19,14 @@ requirements:
     - python >=3.8
     - pip
     - h5py
+    - tqdm
     - numpy
     - scipy
     - sympy
     - einops
     - pandas
     - pyarrow
+    - requests
     - matplotlib
     - tensorboard
     - scikit-learn
@@ -41,12 +43,14 @@ test:
   requires:
     - pip
     - h5py
+    - tqdm
     - numpy
     - scipy
     - sympy
     - einops
     - pandas
     - pyarrow
+    - requests
     - matplotlib
     - tensorboard
     - scikit-learn
