--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -18,6 +18,8 @@ requirements:
   host:
     - python >=3.8
     - pip
+  run:
+    - python >=3.8
     - h5py
     - tqdm
     - numpy
@@ -34,32 +36,11 @@ requirements:
     - tsdb >=0.4
     - pygrinder >=0.6
     - benchpots >=0.1
-  run:
-    - python >=3.8
 
 test:
   imports:
     - pypots
-  requires:
-    - pip
-    - h5py
-    - tqdm
-    - numpy
-    - scipy
-    - sympy
-    - einops
-    - pandas
-    - pyarrow
-    - requests
-    - matplotlib
-    - tensorboard
-    - scikit-learn
-    - pytorch >=1.10.0
-    - tsdb >=0.4
-    - pygrinder >=0.6
-    - benchpots >=0.1
-  commands:
-    - pip check
+    - pypots.nn.modules
 
 about:
   home: https://github.com/WenjieDu/PyPOTS
