--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -11,7 +11,7 @@ source:
 
 build:
   noarch: python
-  script: {{ PYTHON }} -m pip install . -vv --no-deps --no-build-isolation
+  script: {{ PYTHON }} -m pip install . -vv
   number: 0
 
 requirements:
@@ -29,13 +29,14 @@ requirements:
     - pandas
     - pyarrow
     - requests
+    - seaborn
     - matplotlib
     - tensorboard
     - scikit-learn
     - pytorch >=1.10.0
-    - tsdb >=0.4
+    - tsdb >=0.6
     - pygrinder >=0.6
-    - benchpots >=0.1
+    - benchpots >=0.2
 
 test:
   imports:
