--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -17,6 +17,7 @@ build:
 requirements:
   host:
     - python >=3.8
+    - setuptools
     - pip
   run:
     - python >=3.8
@@ -35,13 +36,13 @@ requirements:
     - scikit-learn
     - pytorch >=1.10.0
     - tsdb >=0.6
-    - pygrinder >=0.6
-    - benchpots >=0.2
+    - pygrinder >=0.6.4
+    - benchpots >=0.3
+    - ai4ts
 
 test:
   imports:
     - pypots
-    - pypots.nn.modules
 
 about:
   home: https://github.com/WenjieDu/PyPOTS
